Nginx/4-ingress-connection-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectora
  namespace: ids-2
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrought : "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "false"
    nginx.ingress.kubernetes.io/backend-protocol: https
spec:
  tls:
  - secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: connectora.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectora
            port:
              number: 8080
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectorb
  namespace: ids-2
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrought : "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect : "false"
    nginx.ingress.kubernetes.io/backend-protocol: https

spec:
  tls:
  - secretName: tls-secret
  ingressClassName: nginx
  rules:
  - host: connectorb.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: connectora
            port:
              number: 8081
